apps/cdn/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cdn
  namespace: cdn
  labels:
    app: cdn
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: cdn
