apps/cdn/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cdn
  namespace: cdn
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cdn.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: cdn
          port: 80
  tls:
    secretName: cdn-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cdn-http
  namespace: cdn
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`cdn.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: cdn
          port: 80
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: cdn
spec:
  redirectScheme:
    scheme: https
    permanent: true
